Create Welcome, SignUp, Login

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,11 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  background-color: F4F4F4F4;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: #373737;
+  height: 200px;
   padding: 20px;
   color: white;
 }
@@ -18,11 +14,18 @@
   font-size: 1.5em;
 }
 
-.App-intro {
+.intro {
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#pass {
+  font-style: italic;
+  font-size: 1.75rem;
+  font-variant: small-caps;
+  margin-right: 1rem;
+}
+
+#keeper {
+  font-size: 4rem;
+  color: tomato;
 }
