--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -1,13 +1,44 @@
+.App-header {
+  display: grid;
+  background-color: #373737;
+  height: 210px;
+  padding: 10px;
+  color: white;
+}
+
+.title {
+  border-radius: 40px;
+  background: #8a8a8af6;
+  align-items: center;
+  justify-content: center;
+  height: 140px;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.intro {
+  font-size: large;
+}
+
 .panel {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 130px 1fr;
+  grid-template-columns: 1fr 250px 1fr;
+  grid-template-rows: 130px 185px;
+}
+
+.heading {
+  grid-row: 1;
+  grid-column: 2;
+  padding-top: 20px;
+  font-size: 48px;
+  font-family: 'Bitter', sans-serif;
 }
 
 .buttons {
   border: 2px solid slategray;
+  background-color: slategray;
   border-radius: 5px;
-  padding: 30px;
+  padding: 0px;
   grid-row: 2;
   grid-column: 2;
 }
@@ -16,8 +47,18 @@
   padding: 10px;
 }
 
-.heading {
-  grid-row: 1;
-  grid-column: 2;
-  padding-top: 30px;
+
+
+
+
+.trash {
+  font-style: italic;
+  font-size: 3rem;
+  font-variant: small-caps;
+  margin-right: 1rem;
+}
+
+.pass {
+  font-size: 7.75rem;
+  color: tomato;
 }
