Add link to logo to return to /

--- a/src/Welcome.css
+++ b/src/Welcome.css
@@ -4,6 +4,11 @@
   height: 210px;
   padding: 10px;
   color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 .title {
